--- a/src/styles/components/_job.scss
+++ b/src/styles/components/_job.scss
@@ -1,4 +1,6 @@
 .job {
+    width: 80vw;
+
     &__details {
         &__title {
             color: $dark-cyan;
